# SwiftZigbeeSoilMoistureSensor

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  app.overlay  app_usb.overlay  build.sh  prj.conf  prj_power_saving.conf  prj_usb.conf
cad/B3FS-1010/: B3FS-1010.STEP
cad/E73-2G4M08S1C/: E73-2G4M08S1C.kicad_mod
cad/FreeCAD/: box+lid.stl  box.FCStd  box.stl
cad/KiCAD/B3FS-1010/: B3FS-1010.STEP
cad/KiCAD/SwiftSoilMoistureZigbeeSensor/: SwiftSoilMoistureZigbeeSensor.kicad_pcb  SwiftSoilMoistureZigbeeSensor.kicad_prl  SwiftSoilMoistureZigbeeSensor.kicad_sch  fp-lib-table  sym-lib-table
cad/KiCAD/TPS61097a-33/: TPS61097A-33.kicad_sym
cad/NR3015T4R7M/: NR3015T4R7M.stp  part_info.txt
cad/SwiftSoilMoistureZigbeeSensor/: SwiftSoilMoistureZigbeeSensor.kicad_pcb  SwiftSoilMoistureZigbeeSensor.kicad_prl  SwiftSoilMoistureZigbeeSensor.kicad_pro  SwiftSoilMoistureZigbeeSensor.kicad_sch  fp-lib-table  sym-lib-table
doc/: Swift Zigbee Soil Moisture Sensor.odt  flash.drawio  how_to_compile.md
include/: adc.h  zb_range_extender.h  zb_swift_device.h
src/: adc.c  main.c
